--- a/views/register.html
+++ b/views/register.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="signup-content">
                <div class="signup-form">
-                    <form method="POST" class="register-form" id="register-form">
+                    <form method="POST" class="form-inline register-form" id="register-form">
         		<h1 class="form-group">Requester Registration</h1>
         		<p1 class="form-group">Create an iCrowdTask Account</p1>
 		<div class="form-group">
@@ -44,7 +44,7 @@
                             </div>
                         </div>
 
-                        <div class="form-row">
+                        <div >
                             <div class="form-group">
                                 <label for="first_name">First name :*</label>
                                 <input type="text" name="first_name" id="first_name" required/>
