--- a/views/register.html
+++ b/views/register.html
@@ -44,7 +44,7 @@
                             </div>
                         </div>
 
-                        <div >
+                        <div class="form-group">
                             <div class="form-group">
                                 <label for="first_name">First name :*</label>
                                 <input type="text" name="first_name" id="first_name" required/>
