--- a/views/register.html
+++ b/views/register.html
@@ -33,15 +33,16 @@
 		<div class="form-group">
 
                             <label for="country">Country of residence :*</label>
-                            <div class="form-select">
+                            <input type="text" name="country" id="country" required/>
+                           <!-- <div class="form-select">
                                 <select name="country" id="country" required/>
                                     <option value=""></option>
                                     <option value="Australia">Australia</option>
                                     <option value="China">China</option>
                             
                                 </select>
-                                
-                            </div>
+                                <span class="select-icon"><i class="zmdi zmdi-chevron-down"></i></span>
+                            </div>-->
                         </div>
 
             
