--- a/views/login.html
+++ b/views/login.html
@@ -80,13 +80,13 @@
        // The ID token you need to pass to your backend:
        var id_token = googleUser.getAuthResponse().id_token;
        console.log("ID Token: " + id_token);
-       window.location.href='/googleLog';
+      location.href='/googleLog';
      }
 
   $(function(){
     $("#google").click(function(){
   
-      location.href='/googleLog';
+      //location.href='/googleLog';
     })
 
     })
