--- a/views/login.html
+++ b/views/login.html
@@ -66,7 +66,7 @@
 </body>
 </html>
 
-<script>
+<script type="text/javascript">
   function onSignIn(googleUser) {
        // Useful data for your client-side scripts:
        var profile = googleUser.getBasicProfile(); 
@@ -84,13 +84,15 @@
      }
 
   $(function(){
-    $("#google").click(function(){
-  
+    $("#google").click(function (){
+   
       //location.href='/googleLog';
     })
 
     })
- 
+
+
+
  
 </script>
 
