--- a/views/forgetPwd.html
+++ b/views/forgetPwd.html
@@ -27,7 +27,7 @@
 </body>
 </html>
 
-<script>
+<script type="text/javascript">
 $(document).ready(function(){
     $("#send").click(function(){
     var email=$('#email').val();
