--- a/views/login.html
+++ b/views/login.html
@@ -96,7 +96,7 @@
  
 </script>
 
-<script>
+<script type="text/javascript">
   $(function(){
             if(getCookie('name')&&getCookie('password')){
                 $('#username').val(getCookie('name'));
