--- a/views/register.html
+++ b/views/register.html
@@ -113,7 +113,7 @@
 </body>
 </html>
 
-<script>
+<script type="text/javascript">
     $(document).ready(function(){
         $("#register-form").validate({
                 rules: {
